# RAGents

./: .env.example  AGENTS.md  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/src/ragent/: __init__.py  cli.py  server.py
backend/src/ragent/api/v1/: __init__.py  agents.py  chat.py  health.py  ingest.py  skills.py
backend/src/ragent/config/: settings.py
backend/src/ragent/core/: __init__.py  embedding.py  embedding_bge.py  embedding_jina.py  embedding_openai.py  embedding_qwen.py  llm.py  llm_openai.py  types.py
backend/src/ragent/db/: models.py  session.py
backend/src/ragent/tests/: conftest.py  test_api.py  test_core.py  test_e2e_chat.py
docker/: init-db.sql
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: AgentsPage.tsx  ChatPage.tsx  KnowledgePage.tsx
frontend/src/components/: Citation.tsx  Layout.tsx  Message.tsx  MessageInput.tsx
