[project]
name = "ragent"
version = "0.1.0"
description = "Agentic RAG System - Multi-modal, hierarchical intelligent retrieval QA system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.7.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pymilvus>=2.4.0",
    "minio>=7.2.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0.1",
    "unstructured>=0.14.0",
    "python-magic>=0.4.27",
    "aiofiles>=23.2.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-prometheus>=0.54b0",
    "prometheus-client>=0.19.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.13.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-pyyaml>=6.0.12",
    "faker>=25.0.0",
]
[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "UP", "W", "C4", "C90", "ANN", "ARG", "B", "COM", "DTZ", "EM", "EXE", "FA", "ISC", "ICN", "LOG", "N", "PD", "PGH", "PIE", "PL", "PT", "Q", "RET", "RSE", "SIM", "TCH", "TID", "TRY", "PTH", "ERA", "PD0", "RUF"]
ignore = ["ANN101", "ANN102", "ANN103", "ARG001", "ARG002", "PTH118", "PTH123"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/ragent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"